k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mega-app-service-nodeport
  labels:
    app: my-mega-app
spec:
  type: NodePort
  selector:
    app: my-mega-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30007  # you can specify or let Kubernetes assign
      name: my-http
    - protocol: TCP
      port: 443
      targetPort: 8081
      nodePort: 30008  # you can specify or let Kubernetes assign
      name: my-https
