k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mega-app-service
  labels:
    app: my-mega-app
spec:
  selector:
    app: my-mega-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: my-http
    - protocol: TCP
      port: 443
      targetPort: 8081
      name: my-https
