k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-mega-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: my-mega-app.local
      http:
        paths:
          - path: /demo-gw(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-mega-app-service
                port:
                  number: 80
